--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,9 +1,11 @@
 <IfModule mod_rewrite.c>
-    <IfModule mod_negotiation.c>
-        Options -MultiViews
-    </IfModule>
+#    <IfModule mod_negotiation.c>
+#        Options -MultiViews
+#    </IfModule>
 
     RewriteEngine On
+
+    RewriteBase /larva.dev/
 
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
